docs/guides/kubernetes/sth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: sth
  labels:
    app: sth
    app.kubernetes.io/name: sth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sth
      app.kubernetes.io/name: sth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sth
        app: sth
    spec:
      serviceAccountName: sth-sa
      automountServiceAccountToken: true
      containers:
      - name: sth
        image: scramjetorg/sth:0.22.0
        command: ["scramjet-transform-hub"]
        args:
          - "--runtime-adapter=kubernetes"
          - "--k8s-runner-image=scramjetorg/runner:0.22.0"
          - "--k8s-runner-py-image=scramjetorg/runner-py:0.22.0"
          - "--k8s-namespace=default"
          - "--k8s-sth-pod-host=sth-runner"
          - "--k8s-runner-cleanup-timeout=10000"
          - "--k8s-runner-resources-requests-cpu=250m"
          - "--k8s-runner-resources-requests-memory=256M"
          - "--k8s-runner-resources-limits-cpu=500m"
          - "--k8s-runner-resources-limits-memory=512M"
        ports:
        - name: sth-api
          containerPort: 8000
        - name: sth-runner
          containerPort: 8001
      restartPolicy: Always
